# ChangeLog for net-im/jabberd2
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/jabberd2/ChangeLog,v 1.5 2007/11/10 14:04:33 nelchael Exp $

  10 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org> jabberd2-2.1.19.ebuild:
  Add ~ppc.

  10 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  -files/jabberd2-2.1.15.init, -files/jabberd2-2.1.15.pamd,
  -jabberd2-2.1.15.ebuild:
  Remove old version.

*jabberd2-2.1.19 (06 Nov 2007)

  06 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/jabberd2-2.1.19.init, +files/jabberd2-2.1.19.pamd,
  +jabberd2-2.1.19.ebuild:
  Version bump, see bug #198208.

  30 Oct 2007; Markus Ullmann <jokey@gentoo.org> jabberd2-2.1.15.ebuild:
  ~sparc per bug #178055

*jabberd2-2.1.15 (08 Oct 2007)

  08 Oct 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/jabberd2-2.1.15.init, +files/jabberd2-2.1.15.pamd, +metadata.xml,
  +jabberd2-2.1.15.ebuild:
  Split jabberd2 from net-im/jabberd.
