@@ -10,14 +10,19 @@ MD5 ab77cef855566260d6a779d8d77bc78c files/jabberd2-2.1.19.pamd 158
 RMD160 3143cb1689fbebb51c0d72fa4c6b79ee9c015185 files/jabberd2-2.1.19.pamd 158
 SHA256 eba4b5cc68b3dd327cfa1afdadbe5adf6d9383f4c79c7661169a4339e40b9a7b files/jabberd2-2.1.19.pamd 158
 DIST jabberd-2.1.19.tar.gz 832493 RMD160 9e830094e8c37d2ba3be6ff8a713606c151536ab SHA1 37f617f5c6bd29e7151b21142721ef3470f95af6 SHA256 531ced98332e26928229fe83bed41053a61a7a6d8d5978bb107a7f79b5468904
+DIST jabberd-2.1.20.tar.gz 862426 RMD160 0bbb2b96cd845a7e3ef1342d31487f9677e188b0 SHA1 517cd340b507bb320806fa2d1bd8442b3dc508ff SHA256 20841fd9c48316a5061c0745ef3b0b91d15e9837ee1bf549575b599f136f4bfe
 EBUILD jabberd2-2.1.19.ebuild 2946 RMD160 80d61f7d910c9bd61c0f347440ab145a56250817 SHA1 bd6dc3adcfaab47accf9dce3954626baf26b4b30 SHA256 c5fb5a3e6ab6c11d1c2af3b9cee5f49919b614748338b3f94877b272a48eb247
 MD5 b1cba3c602da4e28066c07cfbb8ed1f1 jabberd2-2.1.19.ebuild 2946
 RMD160 80d61f7d910c9bd61c0f347440ab145a56250817 jabberd2-2.1.19.ebuild 2946
 SHA256 c5fb5a3e6ab6c11d1c2af3b9cee5f49919b614748338b3f94877b272a48eb247 jabberd2-2.1.19.ebuild 2946
-MISC ChangeLog 989 RMD160 620625639c939b5fcc4c8f79a82ae8f54a097f4c SHA1 c1c26c2652436851a66af1e19771533e2f1a03ac SHA256 e85968f38d8a4a06adc7a0dde6fd4c776e4516afcd10e60199d4b4e72c767f15
-MD5 5ac37225e1f883837db8011db3690e04 ChangeLog 989
-RMD160 620625639c939b5fcc4c8f79a82ae8f54a097f4c ChangeLog 989
-SHA256 e85968f38d8a4a06adc7a0dde6fd4c776e4516afcd10e60199d4b4e72c767f15 ChangeLog 989
+EBUILD jabberd2-2.1.20.ebuild 2828 RMD160 a1a253455bfd8694f4f7196e5accc48d9562be9f SHA1 feed80f9e8878db67661b5fac7d04de7b818f564 SHA256 01205e61c924b4369a7e3042b5ab49abdb0eceaa1c1438ae14067c05bc89c597
+MD5 a31e5dbe5109b6f4e6e6cb9172430614 jabberd2-2.1.20.ebuild 2828
+RMD160 a1a253455bfd8694f4f7196e5accc48d9562be9f jabberd2-2.1.20.ebuild 2828
+SHA256 01205e61c924b4369a7e3042b5ab49abdb0eceaa1c1438ae14067c05bc89c597 jabberd2-2.1.20.ebuild 2828
+MISC ChangeLog 1118 RMD160 fcc9c05087c039f08a30ae2d5b480a07302b08ba SHA1 890aca7d922e7078d03649d73e2ef6635bcfaf89 SHA256 bd1ae7dd084f8ea2906cbbb9e2156e27ae3e136396092fe53c9fcaefbecaa32f
+MD5 6640d98fd5ff073e195e347a9c9e08b4 ChangeLog 1118
+RMD160 fcc9c05087c039f08a30ae2d5b480a07302b08ba ChangeLog 1118
+SHA256 bd1ae7dd084f8ea2906cbbb9e2156e27ae3e136396092fe53c9fcaefbecaa32f ChangeLog 1118
 MISC metadata.xml 433 RMD160 817394c54e448ad628773a5de8edb4c26b9516f7 SHA1 cca8e15fd99f2b05a3efed75d665e9ab0a57ce4d SHA256 245f08f7b8e66f9240eb7ea237661f7b17e667c9500121770c2611e1033f30c4
 MD5 d299ac2c0ade4fad26820d81e81e1882 metadata.xml 433
 RMD160 817394c54e448ad628773a5de8edb4c26b9516f7 metadata.xml 433
@@ -25,10 +30,13 @@ SHA256 245f08f7b8e66f9240eb7ea237661f7b17e667c9500121770c2611e1033f30c4 metadata
 MD5 bc2e400de28d9bd848fff283f03c3349 files/digest-jabberd2-2.1.19 244
 RMD160 0c8cc6044de65255345f9a8c6aedc93b9ff794bc files/digest-jabberd2-2.1.19 244
 SHA256 33562ba67b26d4d3e0c8771d7c3a73b691d80940daf3ec02e165df2d375b5c71 files/digest-jabberd2-2.1.19 244
+MD5 7a903d580324262ca778e2f1e71e31e9 files/digest-jabberd2-2.1.20 244
+RMD160 1439a0456206a9608d4000ccac9cc8dbed0d6f2b files/digest-jabberd2-2.1.20 244
+SHA256 115e3799639cff8e2e166f041d0025d0e77ee25fd374350ee152827b13e50fd7 files/digest-jabberd2-2.1.20 244
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.8 (GNU/Linux)
 
-iD8DBQFHNbp3go/w9rxVVVERArhDAJ9Xg6lWmckf0OfmZq8yLaPPhjdsTgCgsTbE
-NGQVSRs4roajaMCw8UZLsrk=
-=PKw5
+iEYEARECAAYFAkeDMkEACgkQgo/w9rxVVVGW/gCeN42IuuzU031W+suFn7mbjrYR
+vDkAoJzj97CfA5fJxaTpiDQpb3NmFa2Y
+=Go/s
 -----END PGP SIGNATURE-----
