@@ -1,0 +1,3 @@
+MD5 5e6bcacba9fb28b313314db9d266c0ea jabberd-2.1.20.tar.gz 862426
+RMD160 0bbb2b96cd845a7e3ef1342d31487f9677e188b0 jabberd-2.1.20.tar.gz 862426
+SHA256 20841fd9c48316a5061c0745ef3b0b91d15e9837ee1bf549575b599f136f4bfe jabberd-2.1.20.tar.gz 862426
