@@ -1,6 +1,12 @@
 # ChangeLog for net-im/jabberd2
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/jabberd2/ChangeLog,v 1.5 2007/11/10 14:04:33 nelchael Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/jabberd2/ChangeLog,v 1.6 2008/01/08 08:20:12 nelchael Exp $
+
+*jabberd2-2.1.20 (08 Jan 2008)
+
+  08 Jan 2008; Krzysiek Pawlik <nelchael@gentoo.org>
+  +jabberd2-2.1.20.ebuild:
+  Version bump.
 
   10 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org> jabberd2-2.1.19.ebuild:
   Add ~ppc.
